<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="#008080"-->
<!--        tools:ignore="MissingConstraints">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/HelloWorld"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:textSize="20sp" />-->

<!--    </androidx.appcompat.widget.Toolbar>-->

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="insert autofill hint here"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:text="@string/homework_title"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="HardcodedText" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="363dp"
        android:layout_height="244dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toTopOf="@+id/calendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck">

        <Button
            android:id="@+id/button34"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/Button34" />

        <Button
            android:id="@+id/button35"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button35" />

        <Button
            android:id="@+id/button36"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button36" />

        <Button
            android:id="@+id/button37"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button37" />

        <Button
            android:id="@+id/button38"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button38" />

        <Button
            android:id="@+id/button39"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button39" />

        <Button
            android:id="@+id/button40"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button40" />

        <Button
            android:id="@+id/button41"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button41" />

        <Button
            android:id="@+id/button42"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button42" />

        <Button
            android:id="@+id/button43"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button43" />

        <Button
            android:id="@+id/button44"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button44" />

        <Button
            android:id="@+id/button45"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button45" />

        <Button
            android:id="@+id/button46"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button46" />

        <Button
            android:id="@+id/button47"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button47" />

        <Button
            android:id="@+id/button48"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/button48" />

        <Button
            android:id="@+id/button49"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_rowSpan="2"
            android:layout_column="3"
            android:text="@string/button49" />

        <Button
            android:id="@+id/button50"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:text="@string/button50" />

        <Button
            android:id="@+id/button51"
            style="@style/Widget.AppCompat.Button"
            android:layout_row="4"
            android:layout_column="2"
            android:text="@string/button51" />

    </GridLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="358dp"
        android:layout_height="288dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
